package co.edu.uniquindio.model.empresa;

public enum Categoria {
    GERENTE, SUBGERENTE, ADMINISTRADOR
}
